--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.2.1",
-    "hbs": "^4.2.0",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "express-handlebars": "^6.0.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.2.1",
