--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.2.1",
+    "argon2": "^0.28.7",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "class-validator": "^0.13.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.2.1",
@@ -46,6 +49,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/passport-local": "^1.0.34",
