--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch && next dev",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -34,12 +34,17 @@
     "argon2": "^0.28.7",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "nestjs-i18n": "^9.1.5",
+    "next": "^12.2.5",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
